2009-03-01  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Holger Freyther.

        Fixes crash when the GIO backend is given the URI for a directory.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::networkErrorForFile):

2009-02-28  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=24261
        Fix V8 custom binding scrubbing error.

        Test: fast/dom/TreeWalker/TreeWalker-currentNode.html
        Test: traversal/exception-forwarding.html
        TesT: traversal/stay-within-root.html

        * bindings/v8/custom/V8CSSStyleDeclarationCustom.cpp:
        * bindings/v8/custom/V8NodeIteratorCustom.cpp:
        (WebCore::toV8): Replace v8::Undefined() return value with v8::Null().
        * bindings/v8/custom/V8TreeWalkerCustom.cpp:
        (WebCore::toV8): Ditto.

2009-02-28  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=24261
        Fix V8 custom binding scrubbing error.

        Test: fast/dom/CSSStyleDeclaration/css-properties-case-sensitive.html

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/v8/custom/V8CSSStyleDeclarationCustom.cpp:
        (WebCore::cssPropertyName):  Remove dubious checks, left over from
            incomplete conversion of parameter from pointer to pass-by-ref.
        (WebCore::NAMED_PROPERTY_GETTER): Initialize parameter.
        (WebCore::NAMED_PROPERTY_SETTER): Ditto.

2009-02-28  Xan Lopez  <xan@gnome.org>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=24263
        [GTK] ref ResourceHandle until we are finished with it

        Add a ref to the ResourceHandle in startHttp so we can keep it
        alive untill all callbacks have been executed, and unref it when
        soup tells us it's done with the SoupMessage (in
        finishedCallback). Fixes a number of crashes when calling